--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     volumes:
       # - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./configs/prometheus-config.yml:/etc/prometheus/prometheus-config.yml # passing the directory instead of just the config file for prometheus
+      - ./configs/prometheus-rules.yml:/etc/prometheus/prometheus-rules.yml
       # - prometheus-data:/prometheus
     container_name: logging-prometheus
     command: "--config.file=/etc/prometheus/prometheus-config.yml"
